# agit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SETUP.md
.agit/: agents.yaml
.agit/prompts/: doc_updater.md  feature_engineer.md  reviewer.md  test_writer.md
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  doc.yml  feature.yml  test.yml
.github/workflows/: agit-runner.yml  ci.yml
crates/agit-cli/: Cargo.toml
crates/agit-cli/src/: cli.rs  main.rs
crates/agit-core/: Cargo.toml
crates/agit-core/src/: config.rs  consumption.rs  history.rs  lib.rs  logs.rs  policy.rs  trace.rs  usage.rs
crates/agit-runner/: Cargo.toml
crates/agit-runner/src/: agent.rs  gh.rs  git.rs  history_api.rs  main.rs  provider.rs  retry.rs  review.rs  run.rs
crates/agit-server/: Cargo.toml
crates/agit-server/src/: main.rs
demo-project/: README.md  package.json
demo-project/.agit/: agents.yaml
demo-project/.agit/prompts/: test_writer.md
demo-project/src/: parseAmount.ts
demo-project/tests/: parseAmount.test.ts
docs/: ARCHITECTURE.md  BUSINESS_MODEL.md  CONCEPTS.md  POC.md
scripts/: agit-retry  agit-review  agit-run
