[workspace]
resolver = "2"
members = [
    "crates/agit-core",
    "crates/agit-cli",
    "crates/agit-runner",
    "crates/agit-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aurelienfoucault/agit"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

[profile.release]
lto = "thin"
codegen-units = 1
