[package]
name = "agit-runner"
description = "Self-hosted runner that executes Agit missions on customer infrastructure."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "agit-runner"
path = "src/main.rs"

[dependencies]
agit-core = { path = "../agit-core" }
anyhow.workspace = true
clap.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tempfile.workspace = true
tiny_http = "0.12"
